--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,18 @@ body {
     width: 100%;
     height: 10px;
 }
+
+.fa {
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    float: left;
+}
+.fa:hover {opacity: 0.7;}
+.fa-facebook {background: #3B5998; color: white;}
+.fa-instagram {background: #E1306C; color: white;}
+.fa-youtube {background: #bb0000; color: white;}
